fixed body armour overflow on long names

--- a/src/components/CharacterGeneration/CharacterGeneration.css
+++ b/src/components/CharacterGeneration/CharacterGeneration.css
@@ -54,6 +54,15 @@
     padding: 11px;
     border-radius: 3px;
 }
+
+.armourName {
+    position: relative;
+    max-width: 8ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .attributeRow:hover,
 .uniformStats:hover,
 .armourStats:hover {
